--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,19 @@
-.App {
-  text-align: center;
+.app {
+  width: 500px;
+  margin: 0 auto;
+  padding: 10px;
+  margin-top: 300px;
+  border-radius: 3px;
+  border: 1px solid black;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__controls {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #09d3ac;
+.break__lenght, .session__lenght {
+  width: fit-content;
+}
+.break__lenght__io, .session__lenght__io {
+  display:  flex;
+  justify-content: center;
 }
